syntax = "proto3";

package datanode;

import "google/protobuf/timestamp.proto";

option java_package = "io.github.belugabehr.datanode.domain";
option java_outer_classname = "DataNodeDomain";

message BlockIdentifier {
  string blockPoolId = 1;
  uint64 blockId = 2;
  uint64 generationStamp = 3;
}

message BlockMetaData {
  BlockIdentifier blockId = 1;
  google.protobuf.Timestamp cTime = 2;
  StorageInfo storageInfo = 3;
  int32 checksumChunkSize = 4;
}

message StorageInfo {
  string volumeGroupId = 1;
  repeated string volumeId = 2;
  int32 blockSize = 3;
}

message ChecksumInfo {
  int32 checksumChunkSize = 1;
  bytes checksumChunks = 2;
}

message DataNodeInfo {
	string dataNodeUUID = 1;
	// ClusterID identifier is used to identify all the nodes in the cluster. 
	// string clusterID = 2;
	google.protobuf.Timestamp cTime = 2;
}

message BlockPoolInfo {
    string blockPoolID = 1;
    int32 namespaceID = 2;
    string clusterID = 3;
    sint32 layoutVersion = 4;
    uint64 cTime = 5;
}

message VolumeInfo {
	string storageUUID = 1;
	uint64 cTime = 2;
	sint32 layoutVersion = 3;
}